# FuzzERR-final

./: .gitignore  README.md
DetectERR-final/: .gitignore  README-llvm.md  README.md
DetectERR-final/clang/lib/: CMakeLists.txt
DetectERR-final/clang/lib/DetectERR/: CMakeLists.txt  DetectERR.cpp  DetectERRASTConsumer.cpp  EHFCallVisitors.cpp  EHFCollectors.cpp  ErrGuard.cpp  ErrPoint.cpp  GotoVisitors.cpp  (+6 more)
DetectERR-final/clang/tools/: CMakeLists.txt
DetectERR-final/clang/tools/detecterr/: CMakeLists.txt  DetectERRMain.cpp  README.md
DetectERR-final/clang/tools/detecterr/utils/: README.md  runtool.py
DetectERR-final/clang/tools/detecterr/utils/port_tools/: generate_ccommands.py
DetectERR-final/clang/tools/detecterr/utils/tests/: cpp_basic.cpp  cpp_returnneg.cpp  cpp_throw.cpp  exitfn.c  fifuzz.c  goto.c  nested_guards.c  retnull.c  retnullback.c  returnearly.c  retval.c  retzero.c  switch.c
DetectERR-final/clang/tools/diagcollector/: CMakeLists.txt  DiagCollectorMain.cpp
ErrLib/: Makefile
ErrLib/include/errlib/: err.h
ErrLib/src/errlib/: afl_patch.c  common.c  common.h  demangle.h  err.c
FuzzERR_AFLplusplus/: .gitignore  README.md  README_aflpp.md
FuzzERR_AFLplusplus/include/: snapshot-inl.h
FuzzERR_AFLplusplus/instrumentation/: afl-compiler-rt.o.c
FuzzERR_AFLplusplus/src/: afl-cc.c  afl-forkserver.c  afl-fuzz-bitmap.c  afl-fuzz-run.c  afl-fuzz.c
InstrumentationPasses/: CMakeLists.txt
InstrumentationPasses/FuzzERRInstrumentation/: CMakeLists.txt
InstrumentationPasses/FuzzERRInstrumentation/include/: ErrBlockHandler.h  ErrCheckLevelInfo.h  HeuristicInfo.h  InstrumentationHelper.h
InstrumentationPasses/FuzzERRInstrumentation/src/: ErrBlockHandler.cpp  ErrCheckLevelInfo.cpp  HeuristicInfo.cpp  InstrumentErr.cpp  InstrumentationHelper.cpp
InstrumentationPasses/Utils/: CMakeLists.txt
InstrumentationPasses/Utils/include/: LLVMHelpers.h  MetadataHelpers.h  Utils.h
InstrumentationPasses/Utils/src/: LLVMHelpers.cpp  MetadataHelpers.cpp  Utils.cpp
experiments/libjpeg/: fuzz_jpegoptim.json
scripts/: build_instrumenterr_pass.sh  clearlogs.sh  crash_triage.sh  crash_triage_fifuzz.sh  create_wllvm_apimu4c_libssl.sh  create_wllvm_apimu4c_openssl_dataset.sh  create_wllvm_libavcodec.sh  create_wllvm_libavformat.sh  create_wllvm_libavutil.sh  create_wllvm_libcairo.sh  create_wllvm_libfreetype.sh  create_wllvm_libjpeg.sh  create_wllvm_libpng.sh  create_wllvm_libpoppler.sh  create_wllvm_libsqlite.sh  create_wllvm_libssl.sh  create_wllvm_libxml.sh  create_wllvm_libzstd.sh  dry_run.sh  fuzzerr_custom_mutator.py  fuzzerr_fifuzz_mutator.py  fuzzerr_mutator_random.py  inst_libavcodec.sh  inst_libavformat.sh  inst_libavutil.sh  inst_libboost_lib.sh  inst_libbz2.sh  inst_libcairo.sh  inst_libcrypto.sh  inst_libelf.sh  inst_libfontconfig.sh  inst_libfreetype.sh  inst_libjpeg.sh  inst_libncurses.sh  inst_libpng.sh  inst_libpoppler.sh  inst_libprocps.sh  inst_libsqlite.sh  inst_libssl.sh  inst_libxml2.sh  (+5 more)
scripts/fuzzerr/: convert_txt_to_mask.py  crash_deduplicate.py  crash_finder.py  crash_minimizer.py  force_minimization.py  fuzz_bin.py  utils.py
(+31 files in other folders)
